# backend/docs/swagger.yaml
@@ -155,6 +155,21 @@ definitions:
       title:
         type: string
     type: object
+  services.GetProfileResp:
+    properties:
+      bookmarks:
+        items:
+          $ref: '#/definitions/services.ProfilePost'
+        type: array
+      following:
+        items:
+          $ref: '#/definitions/services.ProfileUser'
+        type: array
+      liked_posts:
+        items:
+          $ref: '#/definitions/services.ProfilePost'
+        type: array
+    type: object
   services.ListMyPostsResp:
     properties:
       items:
@@ -211,6 +226,20 @@ definitions:
       slug:
         type: string
       title:
+        type: string
+    type: object
+  services.ProfilePost:
+    properties:
+      id:
+        type: string
+      title:
+        type: string
+    type: object
+  services.ProfileUser:
+    properties:
+      id:
+        type: string
+      username:
         type: string
     type: object
   services.ToggleLikeResp:
@@ -476,6 +505,29 @@ paths:
       security:
       - BearerAuth: []
       summary: Update a post
+  /api/v1/me/profile:
+    get:
+      consumes:
+      - application/json
+      description: Get user's following, bookmarks, and liked posts (requires authentication)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/services.GetProfileResp'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResp'
+      security:
+      - BearerAuth: []
+      summary: Get user profile
   /api/v1/posts:
     get:
       consumes:
